Implement replication operation API
This commit implements the replication operation related APIs
